--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>My first web page</h1>
+    <h2>Lorem ipsum dolor sit amet</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<strong>Quisquam</strong> </p>
 Lorem ipsum dolor sit, amet consectetur adipisi
 cing elit. Molestias quisquam aliquam, re
 rum placeat tenetur itaque iure eos eveniet rem. Animi voluptatibus nobis, dolores corporis facere perspic
